<resources>
    <string name="app_name">KNUGra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">학생경력관리 시스템</string>
    <string name="nav_header_subtitle">학생경력관리를 도와줘요!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">설정</string>

    <string name="menu_career_success">남은 졸업자격요건 관리</string>
    <string name="menu_g_info_search">졸업자격요건 확인</string>
    <string name="menu_std_info_input">학생 정보 입력</string>
    <string name="menu_doc_agree">증명서 승인</string>
    <string name="menu_std_info_search">학생 정보 검색</string>
    <string name="menu_qa">QnA</string>
    <string name="menu_notice">공지</string>

    <string name="graduation_item_status">"졸업 요건 달성 현황"</string>
    <string name="graduation_item">"졸업 요건"</string>
    <string name="sc_item">"항목"</string>
    <string name="sc_pct">"학생/졸업기준"</string>
    <string name="sc_std">"학생"</string>
    <string name="sc_gra">"졸업기준"</string>
    <string name="sc_percent">"%"</string>
    <string name="sc_prg">"달성도"</string>
    <string name="sc_curriculum_status">"교과 과정 이수 현황"</string>
    <string name="sc_curriculum">교과 과정</string>
    <string name="required_subject_complete_status">"필수 과목 이수 현황"</string>
    <string name="design_subject_complete_status">"설계 과목 이수 현황"</string>
    <string name="common_subject_complete_status">"공통 과목 이수 현황"</string>
    <string name="general_subject_complete_status">"교양 과목 이수 현황"</string>
    <string name="startup_subject_complete_status">"창업 과목 이수 현황"</string>
    <string name="connected_subject_complete_status">"연계 전공 과목 이수 현황"</string>
    <string name="sc_gra_item">"졸업자격 인정원"</string>
    <string name="required_subject">"필수 교과목"</string>
    <string name="design_subject">"설계 교과목"</string>
    <string name="common_subject">"공통 교과목"</string>
    <string name="general_subject">"교양 교과목"</string>
    <string name="startup_subject">"창업 교과목"</string>
    <string name="connected_subject">"연계 전공 교과목"</string>
    <string name="subject_number">"과목번호</string>
    <string name="subject_name">"교과목명"</string>
    <string name="subject_success">"이수여부"</string>
    <string name="design_credit">"이수 설계학점"</string>

    <string name="menu_home">메뉴</string>
    <string name="title_activity_login">로그인</string>
    <string name="prompt_email">Yes 시스템 아이디</string>
    <string name="prompt_id">Yes 시스템 ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="welcome">"환영합니다 ! "</string>
    <string name="invalid_username">유효한 아이디가 아닙니다.</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"로그인 실패"</string>
    <string name="title_activity_settings">설정</string>

    <string name="ok">확인</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
패
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
