<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/item_career_success"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:text="@string/sc_item"
            android:textAlignment="center"
            android:textSize="17dp"
            android:textStyle="" />

        <TextView
            android:id="@+id/percent_career_success"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:text="@string/sc_pct"
            android:textAlignment="textEnd"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/percent_career_success2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="textEnd"
            android:textSize="15dp"
            android:text="@string/sc_percent"/>

        <ProgressBar
            android:id="@+id/success_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:max="100"
            android:progressBackgroundTint="@color/colorLightGrayB"
            android:progressTint="@color/colorOrange">
        </ProgressBar>
    </LinearLayout>

    <ImageView
        android:id="@+id/recyclerview_expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:visibility="gone"
        android:src="@drawable/ic_expand_more_black_24dp"/>

    <LinearLayout
        android:id="@+id/cs_subject_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/cs_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@color/colorLightGrayB"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16dp"
            android:text="@string/sc_curriculum_status"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorLightGrayC">
            <TextView
                android:id="@+id/cs_subject_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                android:textSize="16dp"
                android:text="@string/subject_name"/>

            <TextView
                android:id="@+id/cs_success_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/subject_success"
                android:textAlignment="center"
                android:textSize="16dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_subject_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>
